--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.1"
   }
 }
